--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,6 +10,7 @@ header {
 h1 {
     text-align: center;
     font-family: 'Passions Conflict';
+    font-size: 200px;
 }
 h3 {
     text-align: center;
@@ -27,16 +28,16 @@ header img {
 }
 .sommaire {
     border: 1px solid white;
-    width: 700px;
-    padding: 5px;
+    width: 1000px;
+    padding: 20px;
     border-radius: 20px;
     background-color: rgba(255, 255, 255, 0.37);
     text-align: center justify;
     box-shadow: 10px 5px 10px rgba(0, 0, 0, 0.35);
-    justify-content: center;
+    margin: auto;
     }
     nav {
-        text-align: center;
+        
         
     }
                                                        /* MAIN */
@@ -49,7 +50,11 @@ header img {
     padding: 10px;
     background: rgba(184, 184, 183, 0.726);
     width: 50%;
-    flex-direction: row;
+    flex-direction: row-reverse;
+}
+.separation1 {
+    height: 10px;
+    background-color: rgb(255, 255, 255); 
 }
 .contain {
     margin: 10px;
@@ -57,6 +62,9 @@ header img {
     background: rgb(252, 214, 237);
     width: 50%;
     flex-direction: row;
+}
+.between {
+    justify-content: space-between;
 }
 
 
