--- a/Site CV/css/style.css
+++ b/Site CV/css/style.css
@@ -1,7 +1,43 @@
-/*voir landing page avec logo*/
 
-                                                    /* ENTETE */
-.flex {
+
+                                                 /* ENTETE */
+body {
+    margin: auto 20px;
+}
+                                                 .entete {
+    background-color: cadetblue;
+    padding: 10px;
+}
+h1 {
+    font-family: 'Annie Use Your Telescope', cursive;
+    font-weight: bold;
+    color: white;
+}
+h2 {
+    font-family: 'Annie Use Your Telescope', cursive;
+}
+.monNom p {
+    font-family: 'Dawning of a New Day', cursive;
+    font-size: 50px;
+    color: white;
+}
+.monNom {
+    text-align: center;
+}
+.resume p {
+   border: 1px solid khaki;
+   border-radius: 20px;
+}
+header img {
+    border: 1px solid black;
+    width: 150px;
+    height: 100px;
+}
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+    background-color: #ffc107;
+}
+
+/*.flex {
 display: flex;
 }
 
@@ -21,10 +57,7 @@ header {
     font-size: 100px;
 }
 
-img {
-    border-radius: 50%;
-    margin: 20px;
-}
+
 .noms {
     margin-left: 30px;
 }
@@ -44,14 +77,14 @@ img {
         margin-left: 30px;
         margin-bottom: -6px;
         color: white;
-    }
+    }*/
                                             /*nav*/
-    .around {
+   /* .around {
         justify-content: space-around;
-    }
+    }*/
                                          /* section competences/formastage */
 
-
+/*
 .container {
     margin: auto;
     padding: 20px;
@@ -126,12 +159,14 @@ h2 {
 .fa-location-dot
 {
     color: coral;
-}
-
+}*/
 
 /*==============================================================
-                       PAGE CONTACT / CONTACT FORM
+                       PAGE BLOGFOLIO / CONTACT FORM
 ================================================================*/
+/*==============================================================
+                       PAGE CONTACT / CONTACT FORM
+================================================================*//*
 .basdepage {
     background-color: rgb(4, 57, 61);
     padding: 20px;
@@ -139,7 +174,7 @@ h2 {
     margin-bottom: 20px;
     text-align: center;
     color: #fff;
-}
+}*/
 
 /*------------------FORM----------------------*/
 form {
