--- a/cours/responsive/responsive.css
+++ b/cours/responsive/responsive.css
@@ -27,7 +27,7 @@
         display: none;
     }
 }
-@media screen and (max-width: 768px) and (max-width:996px) {
+@media screen and (min-width: 768px) and (max-width:996px) {
     .direction {
         flex-direction: column-reverse;
     }
