--- a/Site CV/css/style.css
+++ b/Site CV/css/style.css
@@ -1,54 +1,68 @@
-
-
-                                                 /* ENTETE */
+/*==============================================================
+                       HEADER
+================================================================*/
 body {
-    margin: auto 10px;
+    margin: 0 10px;
+
 }
 * {
-    outline: 1px solid black;
+    outline: 1px solid orangered;
 }
 
-.entete li {
+.accueil, .blog, .contact, .liens {
     list-style: none;
-    background-color:rgb(255, 254, 248);
-}
-header {
-    background-color: cadetblue;
+    background-color: whitesmoke;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.35);
+    border-radius: 5px;
+    
+}
+.entete li img {
+    background-color: transparent;
+    background-image: none;
+    border: none;
+    width: auto;
+    height: 70px;
+    margin: 0 200px;
+}
+
+header {
+    background-color : cadetblue;
     width: 100%;
 }
 
-.logo-burger, .logofooter {
-    width: 150px;
-    height: 100px; 
-}
-
-.logo-central {
-    width: 200px;
-    height: 150px; 
+.logo-burger {
+    background-color: transparent;
+    background-image: none;
+    border: none;
+    width: auto;
+    height: 80px; 
+    margin: 0 5px;
 }
 
 @media screen and (min-width: 992px) {
     .navbar-brand {
         display: none;
     }
-}
-
-h1 {
-    font-family: 'Annie Use Your Telescope', cursive;
-    font-weight: bold;
-    font-size: 60px;
-    color: black;
-    text-align: center;
-    text-shadow: khaki 1px 0 5px;
-    margin: 0 0 30px 0;
-    padding: 30px 0;
+} 
+@media screen and (max-width: 992px) {
     
 }
-.indication-couleur {
-    background: linear-gradient(cadetblue, 50%, white);
+h1 {
+    font-family: 'Annie Use Your Telescope', cursive;
+    font-size: 4vw;
+    font-weight: bold;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    
+    margin: 0 0 30px 0;
+    padding: 30px 0 60px 0;
+    background: linear-gradient(cadetblue, 80%, white);
     width: 100%;
-  }
+}
+/*==============================================================
+                       MAIN
+================================================================*/
+/*------------------ RESUME ----------------------*/
 h2 {
     font-family: 'Annie Use Your Telescope', cursive;
     font-weight: bold;
@@ -72,6 +86,10 @@ h2::first-letter {
    margin-top: 15px;
    padding: 5px;
 }
+.sommaire p::first-letter {
+    color: cadetblue;
+    font-size: 130%;
+}
 .btn-cv{
     background-color: khaki;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.35);
@@ -80,25 +98,101 @@ h2::first-letter {
     background-color: cadetblue;
     color: white;
 }
-.skillsetcompetences {
-    /* margin: auto 20px; */
-}
+/*------------------ COMPETENCES ET EXPERIENCES----------------------*/
 .skills {
     
-    background-color: cadetblue;
-    color: white;
+    background-color: rgb(95, 158, 160, 0.5);
+    
+    color: black;
     border-radius: 20px;
     
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.35);
-    
+    margin: 10px 0;
 }
 .skills li {
     list-style: none;
 }
+.skillName {
+    
+    font-size: 15px;
+    font-style: italic;
+    font-weight: bold;
+}
+hr.light {
+    background-color: cadetblue;
+    border: none;
+    width: 15%;
+    height: 2px;
+    opacity: 0.5;
+    border-radius: 2px;
+    margin-top: -10px; 
+}
+hr.dark {
+    background-color: khaki;
+    border: none;
+    width: 15%;
+    height: 2px;
+    opacity: 0.5;
+    border-radius: 2px;
+    margin-top: -10px; 
+}
+/*------------------PROGRESS BAR ET ARC----------------------*/
+.half-arc {
+    position: relative;
+    width: 150px;
+    height: 75px;
+    border-top-left-radius: 120px;
+    border-top-right-radius: 120px;
+    border-bottom: 0;
+    background: #d9d9d9;
+    box-sizing: border-box;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 5px 0;
+}
+
+.half-arc:before {
+    content: "";
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 200%;
+    border-radius: 50%;
+    background-image: conic-gradient(khaki, cadetblue calc(var(--percentage, 0) / 2), rgb(223, 223, 223) 0);
+    transition: transform .5s ease-in-out;
+    z-index: 1;
+    transform: rotate(270deg);
+}
+
+.half-arc:after {
+    content: "";
+    position: absolute;
+    display: block;
+    background: white;
+    z-index: 2;
+    width: calc(100% - 32px);
+    height: calc(200% - 32px);
+    border-radius: 50%;
+    top: 16px;
+    left: 16px;
+}
+
+.half-arc span {
+    color:black;
+    z-index: 3;
+    text-align: center;
+    align-self:flex-end;
+    font-weight: 500;
+}
 .formastage {
-    border-left: 5px solid khaki;
+    border-left: 5px solid cadetblue;
     border-radius: 5px;
-    border-bottom: 1px dotted khaki;
+    border-bottom: 1px dotted cadetblue;
+    padding-left: 3vw;
 }
 .liste {
     list-style: square;
@@ -107,10 +201,31 @@ h2::first-letter {
 .liste p {
     color: black;
 }
-.hardskills {
+.hardskills, .wrapper {
     margin: 30px 0;
+    
 }
-
+.progress {
+    margin: 0 0 10px 0;
+    height: 10px;
+    background-color:  rgb(223, 223, 223);
+}
+.hard-progress-design {
+    margin: 10px 0;
+    padding: 0 20px;
+}
+.hard-design p {
+    font-weight:500;
+}
+.picto {
+    
+   
+    overflow:visible;
+}
+.progress-bar {
+    background: linear-gradient(to right, khaki, 50%, cadetblue);
+}
+/*------------------ PORTFOLIO ----------------------*/
 .portfolio {
     margin-top: 20px;
 }
@@ -121,7 +236,6 @@ h2::first-letter {
     width: 100%;
     margin: 1rem auto;
     max-height: 800px;
-    
     overflow: hidden;
 }
 .swiper4 img {
@@ -135,7 +249,6 @@ h2::first-letter {
 .swiper-slide {
     text-align: center;
 }
-
 .portfolio .btn-blog{
     background-color: khaki;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.35);
@@ -151,8 +264,11 @@ h2::first-letter {
 .swiper-pagination {
     position: relative!important;
     padding: 10px;
-    
 }
+/*==============================================================
+                       FOOTER 1 ET 2
+================================================================*/
+/*------------------FOOTER 1----------------------*/
 .footer1 {
     background-color: cadetblue;
     color: white;
@@ -162,29 +278,23 @@ h2::first-letter {
 .macaron-footer {
     width: 100px;
 }
-.footer2 {
-   font-size: 12px;
-   text-align: center;
-}
 .fa-location-dot
 {
     color: white;
 }
-
+/*------------------FOOTER 2----------------------*/
+.footer2 {
+   font-size: 12px;
+   text-align: center;
+   margin: 15px 0;
+}
 /*==============================================================
                        PAGE BLOGFOLIO / CONTACT FORM
 ================================================================*/
 /*==============================================================
                        PAGE CONTACT / CONTACT FORM
-================================================================*//*
-.basdepage {
-    background-color: rgb(4, 57, 61);
-    padding: 20px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    text-align: center;
-    color: #fff;
-}*/
+================================================================*/
+
 .retouraccueil {
     color: chartreuse;
 }
